refactor spring security for cors requests